<resources>
    <string name="app_name">PhotoGallery</string>
    <string name="error_message">Failed to connect.</string>
    <string name="button_retry">Retry</string>

    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="map">Map</string>
    <string name="map_search">Find an image near you</string>
    <string name="dialog_progress_title">Loading…</string>
    <string name="clear_search">Recently photos</string>
    <string name="empty">Not found.</string>
    <string name="settings">Settings</string>

    <string name="open_page">Open page</string>
    <string name="close">Close</string>

    <string name="new_pictures_title">New PhotoGallery Pictures</string>
    <string name="new_pictures_text">You have new pictures in PhotoGallery.</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_title_polling">Show notifications</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_header_map">Map</string>
    <string name="pref_title_map_search_radius">Search radius</string>
    <string name="pref_title_map_search_count">Max number of photos</string>
    <string name="pref_summary_map_search_radius">Search radius for map in kilometers</string>
    <string name="pref_summary_map_search_count">The maximum number of photos that will be displayed on the map</string>

    <string-array name="map_search_photos_count">
        <item>10</item>
        <item>50</item>
        <item>100</item>
        <item>500</item>
        <item>1000</item>
    </string-array>

    <string-array name="map_search_radius_entries">
        <item>100 m</item>
        <item>500 m</item>
        <item>1 km</item>
        <item>2 km</item>
        <item>5 km</item>
        <item>10 km</item>
    </string-array>

    <string-array name="map_search_radius_values">
        <item>100</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>5000</item>
        <item>10000</item>
    </string-array>
</resources>
